converted some assertions to guarantees and made some IntelliJ assisted improvements